      paths in the output of ``iter_changes``. (Robert Collins)

  API CHANGES:

    * Exporters now take 4 parameters. (Robert Collins)

    * ``Tree.iter_changes`` will now return False for the content change
      field when a file is missing in the basis tree and not present in
      the target tree. Previously it returned True unconditionally.
      (Robert Collins)

  TESTING:

    * ``addCleanup`` now takes ``*arguments`` and ``**keyword_arguments``
      which are then passed to the cleanup callable as it is run. In
      addition, addCleanup no longer requires that the callables passed to
      it be unique. (Jonathan Lange)

  INTERNALS:

    * ``bzrlib.btree_index`` is now available, providing a b-tree index
      layer. The design is memory conservative (limited memory cache),
      faster to seek (approx 100 nodes per page, gives 100-way fan out),
      and stores compressed pages allowing more keys per page.
      (Robert Collins, John Arbash Meinel)

    * ``bzrlib.diff.DiffTree.show_diff`` now skips changes where the kind
      is unknown in both source and target.
      (Robert Collins, Aaron Bentley)


bzr 1.6rc5 2008-08-19
---------------------

  BUG FIXES: 

    * Disable automatic detection of stacking based on a containing
      directory of the target. It interacted badly with push, and needs a
      bit more work to get the edges polished before it should happen
      automatically. (John Arbash Meinel, #259275)
      (This change was reverted when merged to bzr.dev)
  

bzr 1.6rc4 2008-08-18
---------------------

  BUG FIXES: 

    * Fix a regression in knit => pack fetching.  We had a logic
      inversion, causing the fetch to insert fulltexts in random order,
      rather than preserving deltas.  (John Arbash Meinel, #256757)


bzr 1.6rc3 2008-08-14
---------------------

  CHANGES:

    * Disable reading ``.bzrrules`` as a per-branch rule preferences
      file. The feature was not quite ready for a full release.